// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Media /> renders correctly with className 1`] = `
<div
  className="media hello-world"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={false}
  >
    <ReactPlayer
      className=""
      config={
        Object {
          "vimeo": Object {
            "playerOptions": undefined,
          },
        }
      }
      controls={true}
      height="360px"
      light={false}
      loop={false}
      muted={false}
      onBuffer={[Function]}
      onBufferEnd={[Function]}
      onDisablePIP={[Function]}
      onDuration={[Function]}
      onEnablePIP={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onProgress={[Function]}
      onReady={[Function]}
      onSeek={[Function]}
      onStart={[Function]}
      pip={false}
      playbackRate={1}
      playing={false}
      playsinline={false}
      progressInterval={1000}
      src="https://player.vimeo.com/video/263419265"
      stopOnUnmount={true}
      style={Object {}}
      url="https://player.vimeo.com/video/263419265"
      volume={null}
      width="640px"
      wrapper="div"
    />
  </t>
</div>
`;

exports[`<Media /> renders correctly with config 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={false}
  >
    <ReactPlayer
      className=""
      config={
        Object {
          "vimeo": Object {
            "playerOptions": Object {
              "color": "EC6408",
              "portrait": false,
            },
          },
        }
      }
      controls={true}
      height="360px"
      light={false}
      loop={false}
      muted={false}
      onBuffer={[Function]}
      onBufferEnd={[Function]}
      onDisablePIP={[Function]}
      onDuration={[Function]}
      onEnablePIP={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onProgress={[Function]}
      onReady={[Function]}
      onSeek={[Function]}
      onStart={[Function]}
      pip={false}
      playbackRate={1}
      playing={false}
      playsinline={false}
      progressInterval={1000}
      src="https://player.vimeo.com/video/263419265"
      stopOnUnmount={true}
      style={Object {}}
      url="https://player.vimeo.com/video/263419265"
      volume={null}
      width="640px"
      wrapper="div"
    />
  </t>
</div>
`;

exports[`<Media /> renders correctly with data-testid 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={false}
  >
    <ReactPlayer
      className=""
      config={
        Object {
          "vimeo": Object {
            "playerOptions": undefined,
          },
        }
      }
      controls={true}
      data-testid="helloWorld"
      height="360px"
      light={false}
      loop={false}
      muted={false}
      onBuffer={[Function]}
      onBufferEnd={[Function]}
      onDisablePIP={[Function]}
      onDuration={[Function]}
      onEnablePIP={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onProgress={[Function]}
      onReady={[Function]}
      onSeek={[Function]}
      onStart={[Function]}
      pip={false}
      playbackRate={1}
      playing={false}
      playsinline={false}
      progressInterval={1000}
      src="https://player.vimeo.com/video/263419265"
      stopOnUnmount={true}
      style={Object {}}
      url="https://player.vimeo.com/video/263419265"
      volume={null}
      width="640px"
      wrapper="div"
    />
  </t>
</div>
`;

exports[`<Media /> renders correctly with default prop 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={false}
  >
    <ReactPlayer
      className=""
      config={
        Object {
          "vimeo": Object {
            "playerOptions": undefined,
          },
        }
      }
      controls={true}
      height="360px"
      light={false}
      loop={false}
      muted={false}
      onBuffer={[Function]}
      onBufferEnd={[Function]}
      onDisablePIP={[Function]}
      onDuration={[Function]}
      onEnablePIP={[Function]}
      onEnded={[Function]}
      onError={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onProgress={[Function]}
      onReady={[Function]}
      onSeek={[Function]}
      onStart={[Function]}
      pip={false}
      playbackRate={1}
      playing={false}
      playsinline={false}
      progressInterval={1000}
      src="https://player.vimeo.com/video/263419265"
      stopOnUnmount={true}
      style={Object {}}
      url="https://player.vimeo.com/video/263419265"
      volume={null}
      width="640px"
      wrapper="div"
    />
  </t>
</div>
`;

exports[`<Media /> renders correctly with iframe and responsive 1`] = `
<div
  className="media"
>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    useIntersectionObserver={true}
    visibleByDefault={false}
  >
    <div
      className="media-player--embed"
    >
      <iframe
        src="https://ssl.caranddriving.com/cdwebsite/player.aspx?id=8221&cid=autorama&responsive=true"
        title="media"
      />
    </div>
  </t>
</div>
`;
